# AndroidStarter

android_rs_base/: Cargo.toml
android_rs_base/src/: app_config.rs  app_container.rs  app_implementor.rs  input.rs  lib.rs  storage.rs
glutin/glutin/src/: lib.rs
glutin/glutin/src/api/egl/: mod.rs
glutin/glutin/src/api/wgl/: mod.rs
glutin_window/: Cargo.toml
glutin_window/src/: lib.rs
matrices/: Cargo.toml
matrices/src/: lib.rs
opengl_graphics/: Cargo.toml  build.rs
opengl_graphics/shaders/: Cargo.toml  lib.rs
opengl_graphics/shaders/colored/: 120.glslf  120.glslv  mod.rs
opengl_graphics/shaders/textured/: 120.glslf  120.glslv  mod.rs
opengl_graphics/src/: back_end.rs  gl.rs  lib.rs  shader_uniforms.rs  shader_utils.rs  texture.rs
trees/: Cargo.toml
trees/src/: lib.rs  main.rs
